# yadro_streamer

./: CMakeLists.txt  index.html
src/: gst_yadro_vad.cpp  gst_yadro_vad.h  server.cpp
